# yotsuba

./: .gitignore  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: action.yml  python-release.yml  python.yml  rust.yml
bindings/python/: .flake8  Cargo.toml  MANIFEST.in  Makefile  README.md  build-wheels.sh  requirements-dev.txt  setup.py
bindings/python/docs/: README.md  conf.py  index.rst  installation.rst  requirements.txt
bindings/python/docs/source/reference/: index.rst  ja.rst  yotsuba.rst
bindings/python/py_src/yotsuba/: __init__.py  ja.py  version.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_ja.py  test_neologd.py  test_yotsuba.py
bindings/python/yotsuba/: __init__.py
neologd/src/: lib.rs  utils.rs
neologd/tests/: utils.rs
src/: lib.rs  utils.rs
tests/: utils.rs
yotsuba/: Cargo.toml  Makefile
yotsuba/src/: consts.rs  ja.rs  lib.rs  utils.rs
yotsuba/tests/: ja.rs  utils.rs
