[package]
name = "noelogd-python"
version = "0.1.0"
authors = ["yutayamazaki <tppymd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "neologd"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.11"

[dependencies.neologd]
version = "*"
path = "../../neologd"
