[package]
name = "yotsuba-python"
version = "0.1.0"
authors = ["yutayamazaki <tppymd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yotsuba"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.11"

[dependencies.yotsuba]
version = "*"
path = "../../yotsuba"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
